--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
+
+spring.jpa.properties.javax.persistence.validation.mode=none
